[package]
name = "adbc-driver-flightsql"
version = "0.1.0"
edition = "2021"
authors = ["SwanLake IO"]
description = "ADBC FlightSQL driver native library distribution for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swanlake-io/adbc-driver-flightsql"
keywords = ["adbc", "flightsql", "arrow", "database"]
categories = ["database"]

[dependencies]
# No runtime dependencies - just exposes the library path

[dev-dependencies]
adbc_core = "0.20"
adbc_driver_manager = "0.20"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
bzip2 = "0.4"
zip = "0.6"
zstd = "0.13"
tempfile = "3.13"
